# ComfyUI-Pulse-MeshAudit

./: .gitignore  BINARY_REQUIREMENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  comfy-env.toml  mesh_audit_node.py  prestartup_script.py  pyproject.toml
.serena/: project.yml
docs/plans/: 2026-02-19-mesh-audit-carousel-node-design.md  2026-02-20-mesh-audit-stats-panel-design.md  2026-02-20-mesh-audit-stats-panel-implementation.md  2026-02-20-real-agnirt-integration.md
web/css/: mesh_audit_carousel.css
web/js/: mesh_audit_carousel.js
workflows/: mesh_audit.json
